--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
     "build": "webpack --optimize-minimize"
   },
   "dependencies": {
+    "aphrodite": "^1.2.4",
+    "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.0.0-alpha.6",
+    "cloudinary": "^1.9.0",
+    "firebase": "^4.3.1",
     "history": "^4.7.2",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.6",
     "react-transition-group": "^1.2.0",
     "reactstrap": "^4.8.0",
