heroku first deploy

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --hot --progress --colors",
     "test": "jest",
-    "build": "webpack --optimize-minimize"
+    "build": "webpack --optimize-minimize",
+    "prod": "webpack-dev-server --inline --hot --progress --colors"
   },
   "dependencies": {
     "aphrodite": "^1.2.4",
@@ -34,6 +35,7 @@
     "babel-jest": "^21.0.2",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
     "enzyme": "^2.9.1",
