--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --hot --progress --colors",
     "test": "jest",
-    "build": "webpack --optimize-minimize",
-    "prod": "webpack && node server.js"
+    "build": "NODE_ENV=production webpack",
+    "prod": "node server.js"
   },
   "dependencies": {
     "aphrodite": "^1.2.4",
@@ -31,6 +31,7 @@
     "reactstrap": "^4.8.0",
     "redux": "^3.7.2",
     "redux-saga": "^0.15.6",
+    "serve-static": "^1.12.4",
     "webpack": "^3.5.6"
   },
   "devDependencies": {
@@ -38,9 +39,10 @@
     "babel-jest": "^21.0.2",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "css-loader": "^0.28.7",
+    "ejs": "^2.5.7",
     "enzyme": "^2.9.1",
     "eslint": "^4.6.1",
     "eslint-config-airbnb": "^15.1.0",
@@ -48,6 +50,9 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.3.0",
+    "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.30.1",
+    "image-webpack-loader": "^3.4.2",
     "jest": "^21.0.2",
     "react-test-renderer": "^15.6.1",
     "style-loader": "^0.18.2",
