--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "history": "^4.7.2",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
+    "react-disqus-thread": "^0.4.0",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
