--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "express": "^4.15.4",
     "firebase": "^4.3.1",
     "history": "^4.7.2",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-disqus-thread": "^0.4.0",
     "react-dom": "^15.6.1",
+    "react-lazyload": "^2.2.7",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
