--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "aphrodite": "^1.2.4",
+    "axios": "^0.17.0",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.0.0-alpha.6",
     "cloudinary": "^1.9.0",
+    "codemirror": "^5.31.0",
     "compression": "^1.7.0",
     "express": "^4.15.4",
     "firebase": "^4.3.1",
@@ -24,9 +26,11 @@
     "moment": "^2.18.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
+    "react-codemirror2": "^3.0.3",
     "react-disqus-thread": "^0.4.0",
     "react-dom": "^15.6.1",
     "react-lazyload": "^2.2.7",
+    "react-markdown": "^2.5.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
