--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --hot --progress --colors",
     "test": "jest",
-    "build": "NODE_ENV=production webpack",
+    "build": "NODE_ENV='production' webpack -p",
     "prod": "node server.js"
   },
   "dependencies": {
